Fix spacing for lists and code

--- a/themes/nica/assets/style/layout/_footer.scss
+++ b/themes/nica/assets/style/layout/_footer.scss
@@ -30,6 +30,7 @@
   }
 
   .navigation-menu {
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
