--- a/themes/nica/assets/style/layout/_header.scss
+++ b/themes/nica/assets/style/layout/_header.scss
@@ -19,6 +19,7 @@
   }
 
   .navigation-menu {
+    margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
