--- a/themes/nica/assets/style/layout/_layout.scss
+++ b/themes/nica/assets/style/layout/_layout.scss
@@ -41,7 +41,7 @@ h1 {
 }
 
 p {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   line-height: 1.5rem;
 }
 
@@ -54,5 +54,47 @@ a {
     color: $primary-color;
     // TODO: Review this border
     // border-bottom: 1px solid $primary-color;
+  }
+}
+
+ul {
+  list-style: outside;
+  margin-left: 1rem;
+  li {
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+
+blockquote {
+  border-left: 5px solid $secondary-color;
+  padding: 1rem 1rem 1rem 0;
+  background-color: rgba($primary-color, .08);
+  margin-bottom: 1rem;
+}
+
+code, pre {
+  font-size: .8rem;
+  // TODO: Move to a variable
+  font-family: Consolas, Monaco, Menlo, 'Andale Mono', 'Ubuntu Mono', monospace;
+}
+
+.highlight {
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  width: 100%;
+  
+  pre.chroma {
+    width: 100%;
+    overflow: scroll;
+    padding: 1rem ;
+    background-color: rgba($primary-color, .08);
+    
+    >code {
+      white-space: pre;
+      word-spacing: normal;
+      word-break: normal;
+      word-wrap: normal;
+    }
   }
 }
